fixing html and the logo image

--- a/indx.html
+++ b/indx.html
@@ -41,8 +41,8 @@
             <div class="home-pag">
                 <div>
 
-                    <h1 class="home-pag-header">Hey There.</h1>
-                    <h1 class="home-pag-header">I'm Abbas</h1>
+                    <!--<h1 class="home-pag-header">Hey There.</h1>--> 
+                    <h1 class="home-pag-header">Hey There. I'm Abbas</h1>
 
                 </div>
 
@@ -58,19 +58,19 @@ don’t hesitate to contact me.
             <!-- social media section starts here -->
             <ul class="media-icons-container">
                 <li>
-                    <a href="#main"><img src="images/github-icon.png" class="media-icon"></a>
+                    <a href="#main"><img src="images/github-icon.png" alt="github-icon class="media-icon"></a>
                 </li>
                 <li>
-                    <a href="#main"><img src="images/linkedin-icon.png" class="media-icon"></a>
+                    <a href="#main"><img src="images/linkedin-icon.png" alt="linkedin-icon" class="media-icon"></a>
                 </li>
                 <li>
-                    <a href="#main"><img src="images/angelist-icon.png" class="media-icon"></a>
+                    <a href="#main"><img src="images/angelist-icon.png" alt="angelist-icon" class="media-icon"></a>
                 </li>
                 <li>
-                    <a href="#main"><img src="images/twitter-icon.png" class="media-icon"></a>
+                    <a href="#main"><img src="images/twitter-icon.png" alt="twitter-icon" class="media-icon"></a>
                 </li>
                 <li>
-                    <a href="#main"><img src="images/medium-icon.png" class="media-icon"></a>
+                    <a href="#main"><img src="images/medium-icon.png" alt="medium-icon" class="media-icon"></a>
                 </li>
             </ul>
             <!--illustrations section-->
