fixing errors on index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--Header with navbar starts here-->
 
     <header class="header" id="header">
-        <a href="#"><img src="images/MyLogo.png"></a>
+        <a href="#"><img src="images/MyLogo.png" alt="my-logo"></a>
 
         <!-- toggle button -->
         <nav>
@@ -38,8 +38,6 @@
 
     <main>
         <section class="home-section" id="home">
-            <div class="home-pag">
-                <div>
 
                     <!--<h1 class="home-pag-header">Hey There.</h1>--> 
                     <h1 class="home-pag-header">Hey There. I'm Abbas</h1>
