fix the code and make it clean

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <main>
         <section class="home-section" id="home">
-
-                    <!--<h1 class="home-pag-header">Hey There.</h1>--> 
+            <div class="home-page">
+                <div>
                     <h1 class="home-pag-header">Hey There. I'm Abbas</h1>
 
                 </div>
@@ -56,7 +56,7 @@ don’t hesitate to contact me.
             <!-- social media section starts here -->
             <ul class="media-icons-container">
                 <li>
-                    <a href="#main"><img src="images/github-icon.png" alt="github-icon class="media-icon"></a>
+                    <a href="#main"><img src="images/github-icon.png" alt="github-icon "class="media-icon"></a>
                 </li>
                 <li>
                     <a href="#main"><img src="images/linkedin-icon.png" alt="linkedin-icon" class="media-icon"></a>
