Update from action

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ don’t hesitate to contact me.
             I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
         </h2>
         <form
-          action="https://formspree.io/f/moqrdeno"
+          action="https://formspree.io/f/mgebdyjo"
           method="POST"
           id="contact-form"
           class="contact-form"
