updates on the css and html files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -284,7 +286,7 @@ don’t hesitate to contact me.
             I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
         </h2>
         <form
-          action="https://formspree.io/f/mgebdyjo"
+          action="https://formspree.io/f/mgebdzwe"
           method="POST"
           id="contact-form"
           class="contact-form"
@@ -296,7 +298,7 @@ don’t hesitate to contact me.
               name="full-name"
               id="fullname"
               maxlength="30"
-              placeholder="full name"
+              placeholder="Full name"
               required
             />
             <input
@@ -311,7 +313,8 @@ don’t hesitate to contact me.
               name="comments"
               id="comments"
               maxlength="500"
-              placeholder="Enter text here"
+              placeholder="Write me something..."
+              required
             ></textarea>
             </fieldset>
         
