Revert "My Project On The desktop version Part ||||"

--- a/index.html
+++ b/index.html
@@ -17,48 +17,30 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@300;400;500;600&family=Poppins&family=Roboto:wght@300;400;700&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <!--Header with navbar starts here-->
 
     <header class="header" id="header">
+        <a href="#"><img src="images/MyLogo.png" alt="my-logo"></a>
 
-        <!-- Nav bar section starts here -->
-
-            <a class="my-logo" href="#"><img src="images/MyLogo.png" alt="my-logo"></a>
-
-            <nav>
-                <button type="button" class="menu-button">
-                    <span class="open" id="menu"></span>
-                </button>
-                <ul class="head-nav-lists">
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li>
-                      <img
-                        class="mail"
-                        src="./images/Icon - Mail.svg"
-                        alt="Mail-Box"
-                      />
-                    </li>
-                </ul>
-            </nav>
+        <!-- toggle button -->
+        <nav>
+            <button type="button" class="menu-button">
+                <span class="open" id="menu"></span>
+            </button>
+        </nav>
     </header>
 
      <!--Header with navbar ends here-->
 
     <!--home section starts here-->
-
     <section class="home-section" id="home">
             <div class="home-page">
                 <div>
-                    <h1 class="home-page-header">Hey There. I'm Abbas</h1>
+                    <h1 class="home-pag-header">Hey There. I'm Abbas</h1>
 
                 </div>
 
@@ -96,7 +78,7 @@ don’t hesitate to contact me.
         <!--work section starts here-->
 
     <section class="work-section-container">
-        <div class="work-title-card flex-center">
+        <div class="work-title-card">
             <h2 class="work-title-header">My Recent Works</h2>
 
             <svg alt="horizental line" class="title-separator" width="795" height="2" viewBox="0 0 795 2" fill="none"
