added preserve-data-in-the-browser to js file and udated html file too

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
         id="contact-forms"
         class="contact-form"
       >
-        <section class="inputs">
+        <section class="inputs inputs-fullname">
           <div class="error" id="fullname-error"></div>
           <label for="fullname">Full Name</label>
           <input
@@ -395,7 +395,7 @@
             placeholder="Full name"
           />
         </section>
-        <section class="inputs">
+        <section class="inputs inputs-email">
           <div class="error" id="email-error"></div>
           <label for="email">Email</label>
           <input
