--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abbas Aljuaifari</title>
+    <title>Kj_Waweru</title>
     <!--stylesheet-->
     <link rel="stylesheet" href="style.css" />
     <!--google fonts-->
@@ -70,14 +70,13 @@
     <section class="home-section" id="portfolio-section">
       <div class="home-page">
         <div>
-          <h1 class="home-page-header">Hey There. I'm Abbas</h1>
+          <h1 class="home-page-header">Hey There.I'm KJ</h1>
         </div>
         <div class="home-pag-discription">
-          <h3 class="discription-header">I'm a Software Developer</h3>
+          <h3 class="discription-header">I'm a Web Developer</h3>
           <p class="discription-paragraph">
             I can help you build a product , feature or website Look through
-            some of my work and experience! If you like what you see and have a
-            project you need coded, don’t hesitate to contact me.
+            some of my work and experience!//kj_waweru
           </p>
         </div>
       </div>
@@ -150,10 +149,7 @@
         <div class="about-me-sub-section">
           <h2 class="about-me-header">About me</h2>
           <p class="about-me-description">
-            Hello I'm a software developer! I can help you build a product ,
-            feature or website Look through some of my work and experience! If
-            you like what you see and have a project you need coded, don't
-            hestiate to contact me.
+            Hello I'm a web developer!
           </p>
           <button type="button" class="my-resume-button btn">
             Get My Resume
